re-formatted CSS to fix alignment issues and also adjusted animations for the cards

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -276,8 +276,10 @@ body {
   #education_section {
     #education_format {
       display: flex;
-      flex-direction: row;
       flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+
       .education_card {
         border: 1px solid black;
         padding: 0em 2em 2em 2em;
@@ -290,7 +292,7 @@ body {
           padding: 4em 1em 0em 3em;
           text-decoration: none;
           font-size: 1em;
-          color: rgb(12, 146, 170);
+          color: rgb(12, 125, 170);
           display: inline-block;
         }
 
@@ -301,7 +303,6 @@ body {
         h3 {
           border-bottom: 1px solid grey;
           margin-top: -2em;
-          color: rgb(47, 153, 109);
           text-decoration: none;
         }
 
@@ -357,10 +358,11 @@ body {
     justify-content: center;
     .card {
       transform: translate(-50%, -50%);
-      width: 250px;
+      width: 265px;
       height: 250px;
       background: #000;
       margin: 10em 0em -5em 15em;
+      box-shadow: 3px 3px 10px #888888;
 
       .image {
         overflow: hidden;
@@ -380,7 +382,7 @@ body {
         left: 0;
         width: 80%; /*100%*/
         height: 100%;
-        background: rgba(47, 153, 109, 1);
+        background: rgb(12, 125, 170);
         transition: 0.5s;
         transform-origin: left;
         transform: perspective(2000px) rotateY(-90deg);
@@ -392,13 +394,35 @@ body {
           position: absolute;
           top: 50%;
           transform: translateY(-50%);
+          ul {
+            list-style-type: none;
+            display: flex;
+
+            li {
+              a {
+                border: 1px solid black;
+                padding: 0.3em;
+                display: block;
+                margin: 0 0.5em;
+
+                i {
+                  width: 20px !important;
+                  height: 20px !important;
+                }
+              }
+
+              a:hover {
+                border: 1px solid rgb(231, 44, 185);
+              }
+            }
+          }
 
           h1 {
             margin: 0;
             padding: 0;
-            color: #ff3636;
+            color: rgb(231, 44, 185);
             line-height: 20px;
-            font-size: 20px;
+            font-size: 1.25em;
             text-transform: uppercase;
           }
         }
@@ -412,10 +436,6 @@ body {
 
     .card:hover .details {
       transform: perspective(2000px) rotateY(0deg);
-    }
-
-    .card .details .center ul li a:hover {
-      background: rgb(231, 44, 185);
     }
   }
 }
@@ -465,11 +485,11 @@ body {
 
 @keyframes anim1 {
   from {
-    transform: translateX(-100px);
+    transform: translateY(40px);
     opacity: 0;
   }
   to {
-    transform: translateX(0);
+    transform: translateY(0);
     opacity: 1;
   }
 }
